# nvcontrol

./: .SRCINFO  .gitignore  .gitmodules  .nvim.lua  .rust-analyzer.json  595_DRIVER_VIBRANCE.md  ASTRAL_OWNERS.md  BOLT_API.md  BOLT_INTEGRATION.md  BUILDING.md  Boltfile.toml  CHANGELOG.md  CI.md  COMMANDS.md  CONTAINERIZATION.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  GPT_IDEAS.md  LICENSE  Makefile  NVBIND_INTEGRATION.md  NVIDIA_OPEN_590.md  NV_BOLT.md  PKGBUILD  README.md  SECURITY.md  TODO.md  build.rs  install.sh  nvcontrol-alerts.service  nvcontrol-monitor.service  test_no_tray.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
appimage/: AppImageBuilder.yml
assets/: nvcontrol.desktop
completions/: _nvctl  nvctl.bash  nvctl.fish  nvctl.zsh
dev/: Dockerfile  README.md  docker-compose.yml  install.sh  test-all.sh  test-cli.sh  test-fan-cache.sh  test-gui-responsiveness.sh  test-gui.sh  test-hardware.sh  test-tui.sh  test.sh  uninstall.sh
docs/: ASUS_ASTRAL_FEATURES.md  BUILDING.md  COMMANDS.md  DKMS.md  GSP.md  HDR_CONTROL.md  IMAGE_SHARPENING.md  INDEX.md  KERNEL_DRIVER_580_OPTIMIZATIONS.md  OVERCLOCKING.md  POWER_DETECTION.md  README.md  RTX_5090_SETUP_GUIDE.md  SAFETY_IMPROVEMENTS_ROADMAP.md  TUI_USER_GUIDE.md  VRR_GSYNC.md  building.md  commands.md  digital-vibrance.md  release-checklist.md  safety-roadmap.md  tui-user-guide.md
docs/advisories/: accepted.md  resolved.md  v0.8.10-hotfix-notes.md  v0.8.9-upgrade-notes.md
docs/api/: BACKEND.md  FAN.md  OVERCLOCK.md  POWER.md  README.md  backend.md  display.md  fan.md  gpu.md  overclock.md  power.md  reference.md
docs/commands/: README.md  config.md  container.md  cuda.md  driver.md  gaming.md  gpu.md  overclock.md  power.md  reference.md
docs/config/: README.md  backend-architecture.md  configuration.md  migration.md  session-persistence.md
docs/drivers/: 595-abi-changes.md  README.md  diagnose-release.md  dkms.md  driver-guides.md  gsp.md  kernel-580.md  legacy.md  nvidia-driver.md  nvkms-abi-changes.md  open-590.md  open-610.md
docs/features/: README.md  cuda-ai.md  feature-guides.md  hdr.md  image-sharpening.md  overclocking.md  vibrance.md  vrr-gsync.md
docs/hardware/: README.md  astral-owners.md  asus-astral.md  hardware-guides.md  power-detection.md  rtx-5090-setup.md
docs/integration/: BOLT.md  NVHUD.md  README.md  companion.md  integrations.md  issue-reporting.md  nvhud.md  support-bundle-sample.md
docs/internals/: architecture.md  release-validation.md  runtime-flows.md
experimental/: README.md
experimental/docs/: GHOSTWAVE.md
experimental/src/: bolt_integration.rs
flatpak/: com.github.nvcontrol.yml
man/: nvctl.1
packaging/: PKGBUILD  nvcontrol.desktop
release/: install-system.sh
release/arch/: PKGBUILD  install-services.sh  nvcontrol-game-profile-auto.service  nvcontrol-gamedetect.service  nvcontrol-monitor.service
release/deb/: changelog  control  rules
release/fedora/: nvcontrol.spec
release/popos-cosmic/: README.md  control
run/: Dockerfile  docker-compose.yml  entrypoint.sh
scripts/: install-completions.sh  make-executable.sh  setup-nvibrant.sh  verify-build.sh
src/: advanced_display.rs  advanced_multi_gpu.rs  advanced_power.rs  arch_integration.rs  asus_aura.rs  asus_fan_control.rs  asus_gpu_tweak.rs  asus_power_detector.rs  auto_overclock.rs  benchmark.rs  bolt_integration.rs  companion.rs  config.rs  container.rs  container_runtime.rs  container_specific.rs  cuda.rs  display.rs  display_backend.rs  display_controls.rs  display_info.rs  dlss.rs  drivers.rs  enhanced_overclock.rs  error_messages.rs  error_recovery.rs  fan.rs  game_detection.rs  game_launcher.rs  game_profile_auto.rs  game_scanner.rs  gamescope.rs  gaming_dashboard.rs  gaming_integration.rs  gaming_optimizations.rs  gpu.rs  gpu_passthrough.rs  gpu_profiles.rs  gpu_safe.rs  gsp_firmware.rs  (+50 more)
src/gui/: app.rs  icons.rs  mod.rs  state.rs  theme.rs  toast.rs
src/gui/tabs/: display.rs  dlss.rs  fan.rs  game_profiles.rs  gamescope.rs  gpu.rs  hdr.rs  latency.rs  mod.rs  osd.rs  overclock.rs  power.rs  recording.rs  settings.rs  support.rs  system.rs  vibrance.rs  vrr.rs
src/gui/widgets/: card.rs  header.rs  mod.rs  status_badge.rs
src/tui/: event.rs  mod.rs  terminal.rs
tests/: cli_workflows.rs  gaming.rs  help_contracts.rs  integration_phase1.rs  integration_phase3_phase4.rs  integration_tests.rs  mock_display.rs  mock_gui.rs  mock_nvml.rs  packaging_sanity.rs  regressions.rs  safety.rs  test_gpu_gaming_features.rs  test_mock_backends.rs  test_safety_and_recovery.rs
tests/common/: mod.rs
