[package]
name = "nvcontrol"
version = "0.8.0"
edition = "2024"
authors = ["Christopher Kelley <ckelley@ghostkellz.sh>"]
license = "MIT"
description = "Modern NVIDIA Settings Manager for Linux + Wayland"
homepage = "https://github.com/ghostkellz/nvcontrol"
repository = "https://github.com/ghostkellz/nvcontrol"
keywords = ["nvidia", "gpu", "wayland", "linux", "graphics"]
categories = ["command-line-utilities", "graphics", "hardware-support"]

[lib]
name = "nvcontrol"
path = "src/lib.rs"

# GUI Application
[[bin]]
name = "nvcontrol"
path = "src/bin/nvcontrol.rs"
required-features = ["gui"]

# CLI Tool
[[bin]]
name = "nvctl"
path = "src/bin/nvctl.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
eframe = { version = "0.29", optional = true }
egui_plot = { version = "0.29", optional = true }
egui-phosphor = { version = "0.7", optional = true, default-features = false, features = ["regular", "bold", "fill"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
which = "5"
directories = "5"
ratatui = "0.29"
crossterm = "0.29"
nvml-wrapper = "0.11.0"
toml = "0.8"
tray-icon = { version = "0.14", optional = true }
winit = { version = "0.29", optional = true }
# New dependencies for advanced features
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
notify = "6.1"
notify-rust = "4.11"
num_cpus = "1.16"
sys-info = "0.9"
serde_json = "1.0"
dirs = "5.0"
console = "0.15"
indicatif = "0.17"

# Pure Rust vibrance and container support
libc = "0.2"
nix = { version = "0.29", features = ["ioctl"] }
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["gui", "tray"]
gui = ["eframe", "egui_plot", "winit", "egui-phosphor"]
tray = ["tray-icon"]

