[package]
name = "nvcontrol"
version = "0.8.10"
edition = "2024"
rust-version = "1.95"
authors = ["Christopher Kelley <ckelley@ghostkellz.sh>"]
license = "MIT"
description = "Modern NVIDIA Settings Manager for Linux + Wayland"
homepage = "https://github.com/ghostkellz/nvcontrol"
repository = "https://github.com/ghostkellz/nvcontrol"
keywords = ["nvidia", "gpu", "wayland", "linux", "graphics"]
categories = ["command-line-utilities", "graphics", "hardware-support"]

[lib]
name = "nvcontrol"
path = "src/lib.rs"

# GUI Application
[[bin]]
name = "nvcontrol"
path = "src/bin/nvcontrol.rs"
required-features = ["gui"]

# CLI Tool
[[bin]]
name = "nvctl"
path = "src/bin/nvctl.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
eframe = { version = "0.35", optional = true, default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui_plot = { version = "0.35", optional = true }
egui-phosphor = { version = "0.12", optional = true, default-features = false, features = ["regular", "bold", "fill"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
which = "8"
directories = "6"
ratatui = "0.30"
crossterm = "0.29"
nvml-wrapper = "0.12.1"
toml = "1.1"
# New dependencies for advanced features
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.39"
notify = "8.2"
notify-rust = "4.12"
num_cpus = "1.16"
sys-info = "0.9"
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "6.0"
console = "0.16"
indicatif = "0.18"
flate2 = "1.1"
tar = "0.4"

# Pure Rust vibrance and container support
libc = "0.2"
nix = { version = "0.31", features = ["ioctl", "user"] }
bytemuck = { version = "1.21", features = ["derive", "min_const_generics"] }
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["gui"]
gui = ["eframe", "egui_plot", "egui-phosphor"]

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
